fix select overflow when selected label is too long

--- a/src/components/select/style/index.less
+++ b/src/components/select/style/index.less
@@ -57,6 +57,7 @@
 	&-wrapper {
 		position: relative;
 		display: inline-block;
+		max-width: 100%;
 		z-index: 1;
 	}
 
